Print "WARNING: negative runtime; monotonic clock has gone backwards\n" using log(LOG_WARNING, ...), not just printf(...).

From PR 45421 by Greg Woods.